# nyamedia-bot

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
migrations/2024-02-11-203015_create_telegram_users/: down.sql  up.sql
migrations/2025-08-16-064818_create_media_requests/: down.sql  up.sql
migrations/2025-11-22-081417_create_media/: up.sql
migrations/2025-11-22-082224_alter_media_add_request_id/: down.sql  up.sql
migrations/2026-03-26-120000_create_cli_login_challenges/: down.sql  up.sql
migrations/2026-03-26-210000_create_media_upload_requests/: down.sql  up.sql
src/: auth.rs  bot.rs  database.rs  lib.rs  main.rs  media_upload.rs  models.rs  schema.rs  scraper.rs  static_files.rs  webhook.rs
src/cli_auth/: http.rs  middleware.rs  mod.rs  service.rs  token.rs
src/onedrive/: http.rs  service.rs
static/: index.html
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.jsx  index.css  main.jsx
web/src/pages/: LoginPage.css  LoginPage.jsx  RequestsPage.css  RequestsPage.jsx
