[package]
name = "nyamedia-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }

diesel = { version = "2.1.0", features = ["sqlite"] }
dotenvy = "0.15"

actix-web = "4"
actix-rt = "2.9.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.34", features = ["serde"] }
reqwest = "0.11.24"

toml = "0.8.19"
regex = "1.11.0"
rand = "0.8.5"

[[bin]]
name = "webhook"
path = "src/bin/emby_webhook.rs"

[[bin]]
name = "nyasubworker"
path = "src/bin/nyasubworker.rs"


[[bin]]
name = "bot"
path = "src/bin/nyabot.rs"
